# imagen-apex

./: .env.example  .gitignore  App.tsx  CONTRIBUTING.md  README.md  constants.ts  metadata.json  pyproject.toml  requirements.txt
components/: PipelineSteps.tsx  ProgressBar.tsx
deploy/: cloudbuild.yaml  deploy_cloudrun.py  deploy_vertex.py
docs/: API.md  SETUP.md  TROUBLESHOOTING.md
examples/: basic_usage.py  batch_generation.py
examples/outputs/: README.md
frontend/: .env.example  README.md  index.html  package.json  types.ts
frontend/components/: Button.tsx  PlyViewer.tsx
frontend/services/: geminiService.ts  vertexService.ts
server/: Dockerfile  handler.py  requirements.txt
src/: __init__.py  image_generator.py  pipeline.py  sam3d_client.py  utils.py
